--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde_derive = "0.9"
 serde_json = "0.9"
 seek_bufread = "~1.2"
 byteorder = "1"
+encoding = "0.2"
 
 [dependencies.r-shellitems]
 version = "*"
