--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ seek_bufread = "~1.2"
 byteorder = "1"
 encoding = "0.2"
 
+[dependencies.jmespath]
+version = "^0.1.1"
+
 [dependencies.r-shellitems]
 version = "*"
 path = "../r-shellitems"
