--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ version = "^0.1.1"
 
 [dependencies.r-shellitems]
 version = "*"
-path = "../r-shellitems"
+branch = "master"
+git = "https://github.com/forensicmatt/r-shellitems"
 
 [dependencies.r-winstructs]
 version = "0.1.2"
