--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ serde_json = "0.9"
 seek_bufread = "~1.2"
 byteorder = "1"
 encoding = "0.2"
+log = "0.3"
+env_logger = "0.3"
 
 [dependencies.jmespath]
 version = "^0.1.1"
