--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ env_logger = "0.3"
 version = "^0.1.1"
 
 [dependencies.r-shellitems]
-version = "*"
+version = "0.0.2"
 branch = "master"
 git = "https://github.com/forensicmatt/r-shellitems"
 
