--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,13 @@ byteorder = "1"
 encoding = "0.2"
 log = "0.3"
 env_logger = "0.3"
+trace-error = "0.1.5"
 
 [dependencies.jmespath]
 version = "^0.1.1"
 
 [dependencies.r-shellitems]
-version = "0.0.5"
+version = "0.0.7"
 branch = "master"
 git = "https://github.com/forensicmatt/r-shellitems"
 
