--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,11 @@ trace-error = "0.1.5"
 version = "^0.1.1"
 
 [dependencies.r-shellitems]
-version = "0.0.8"
+version = ">=0.0.8"
 branch = "master"
 git = "https://github.com/forensicmatt/r-shellitems"
 
 [dependencies.r-winstructs]
-version = "0.1.6"
+version = ">=0.3.2"
 branch = "master"
 git = "https://github.com/forensicmatt/r-winstructs"
